examples/Grammar2Model.examples.sandbox/files/gen/simpleGrammarParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 files/gen/simpleGrammar.g 2012-01-17 14:43:01

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
/** 
 * Grammar of Aemilia language
 **/
public class simpleGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "WORD", "DIGIT", "LETTER", "DQUOTE", "DQVAL", "WS", "COMMENT", "LINE_COMMENT", "'ARCHI_TYPE'", "'END'", "'('", "'void'", "')'", "','", "'const'", "':='", "'ARCHI_ELEM_TYPES'", "'ELEM_TYPE'", "'BEHAVIOR'", "'INPUT_INTERACTIONS'", "'OUTPUT_INTERACTIONS'", "';'", "'UNI'", "'AND'", "'OR'", "'='", "'local'", "'stop'", "'.'", "'choice'", "'{'", "'}'", "'cond'", "'->'", "'<'", "'>'", "'?'", "'!'", "'exp'", "'inf'", "'_'", "'ARCHI_TOPOLOGY'", "'ARCHI_ELEM_INSTANCES'", "':'", "'ARCHI_INTERACTIONS'", "'ARCHI_ATTACHMENTS'", "'FROM'", "'TO'", "'integer'", "'real'", "'boolean'", "'list'", "'array'", "'record'", "'prio'", "'rate'", "'weight'", "'+'", "'-'", "'*'", "'/'", "'!='", "'<='", "'>='", "'&&'", "'||'", "'mod'", "'abs'", "'ceil'", "'floor'", "'min'", "'max'", "'power'", "'epower'", "'loge'", "'log10'", "'sqrt'", "'sin'", "'cos'", "'c_uniform'", "'erlang'", "'gamma'", "'exponential'", "'weibull'", "'beta'", "'normal'", "'pareto'", "'b_pareto'", "'d_uniform'", "'bernoulli'", "'binomial'", "'poisson'", "'neg_binomial'", "'geometric'", "'pascal'", "'list_cons'", "'first'", "'tail'", "'concat'", "'insert'", "'remove'", "'length'", "'array_cons'", "'read'", "'write'", "'record_cons'", "'get'", "'put'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int LETTER=6;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int DQUOTE=7;
    public static final int EOF=-1;
    public static final int WORD=4;
    public static final int T__93=93;
    public static final int T__19=19;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int T__90=90;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int COMMENT=10;
    public static final int T__99=99;
    public static final int T__98=98;
    public static final int T__97=97;
    public static final int T__96=96;
    public static final int T__95=95;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int LINE_COMMENT=11;
    public static final int T__85=85;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int WS=9;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int T__73=73;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int T__109=109;
    public static final int T__103=103;
    public static final int T__59=59;
    public static final int T__104=104;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__111=111;
    public static final int T__110=110;
    public static final int DIGIT=5;
    public static final int DQVAL=8;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__102=102;
    public static final int T__101=101;
    public static final int T__100=100;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;

    // delegates
    // delegators


        public simpleGrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public simpleGrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("simpleGrammarParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return simpleGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "files/gen/simpleGrammar.g"; }


    public static class archi_type_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "archi_type"
    // files/gen/simpleGrammar.g:22:1: archi_type returns [Node returnNode] : TK_0= 'ARCHI_TYPE' WORDGen= WORD archi_headerGen+= archi_header archi_elem_typesGen+= archi_elem_types archi_topologyGen+= archi_topology TK_1= 'END' ;
    public final simpleGrammarParser.archi_type_return archi_type() throws RecognitionException {
        simpleGrammarParser.archi_type_return retval = new simpleGrammarParser.archi_type_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token WORDGen=null;
        Token TK_1=null;
        List list_archi_headerGen=null;
        List list_archi_elem_typesGen=null;
        List list_archi_topologyGen=null;
        RuleReturnScope archi_headerGen = null;
        RuleReturnScope archi_elem_typesGen = null;
        RuleReturnScope archi_topologyGen = null;
        try {
            // files/gen/simpleGrammar.g:23:1: (TK_0= 'ARCHI_TYPE' WORDGen= WORD archi_headerGen+= archi_header archi_elem_typesGen+= archi_elem_types archi_topologyGen+= archi_topology TK_1= 'END' )
            // files/gen/simpleGrammar.g:23:3: TK_0= 'ARCHI_TYPE' WORDGen= WORD archi_headerGen+= archi_header archi_elem_typesGen+= archi_elem_types archi_topologyGen+= archi_topology TK_1= 'END'
            {
            TK_0=(Token)match(input,12,FOLLOW_12_in_archi_type48); if (state.failed) return retval;
            WORDGen=(Token)match(input,WORD,FOLLOW_WORD_in_archi_type52); if (state.failed) return retval;
            pushFollow(FOLLOW_archi_header_in_archi_type56);
            archi_headerGen=archi_header();

            state._fsp--;
            if (state.failed) return retval;
            if (list_archi_headerGen==null) list_archi_headerGen=new ArrayList();
            list_archi_headerGen.add(archi_headerGen);

            pushFollow(FOLLOW_archi_elem_types_in_archi_type60);
            archi_elem_typesGen=archi_elem_types();

            state._fsp--;
            if (state.failed) return retval;
            if (list_archi_elem_typesGen==null) list_archi_elem_typesGen=new ArrayList();
            list_archi_elem_typesGen.add(archi_elem_typesGen);

            pushFollow(FOLLOW_archi_topology_in_archi_type64);
            archi_topologyGen=archi_topology();

            state._fsp--;
            if (state.failed) return retval;
            if (list_archi_topologyGen==null) list_archi_topologyGen=new ArrayList();
            list_archi_topologyGen.add(archi_topologyGen);

            TK_1=(Token)match(input,13,FOLLOW_13_in_archi_type68); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node archi_typeReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		archi_typeReturnNode.setKind("archi_type");
              	    // Create a Token CST Leaf	
              	    if(TK_0 != null) {
              			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              	 		TK_0Leaf.setKind("TOKEN");
              	 		TK_0Leaf.setValue((TK_0!=null?TK_0.getText():null));
              			TK_0Leaf.setPos(TK_0.getCharPositionInLine());
              			TK_0Leaf.setLine(TK_0.getLine());
              	 		archi_typeReturnNode.getChildren().add(TK_0Leaf);
              	 	}
              	    // Create a CST Leaf
              		if(WORDGen != null) {
              			Leaf WORDGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              			WORDGenLeaf.setKind("WORD");
              			WORDGenLeaf.setValue((WORDGen!=null?WORDGen.getText():null));
              			WORDGenLeaf.setPos(WORDGen.getCharPositionInLine());
              			WORDGenLeaf.setLine(WORDGen.getLine());
              			archi_typeReturnNode.getChildren().add(WORDGenLeaf);
              		}
              	    // Create a CST Node
              		if(list_archi_headerGen != null) {
              	        for(Iterator it = list_archi_headerGen.iterator(); it.hasNext(); )  { 
              	            simpleGrammarParser.archi_header_return r = (simpleGrammarParser.archi_header_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("archi_header");
              	            	archi_typeReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	    // Create a CST Node
              		if(list_archi_elem_typesGen != null) {
              	        for(Iterator it = list_archi_elem_typesGen.iterator(); it.hasNext(); )  { 
              	            simpleGrammarParser.archi_elem_types_return r = (simpleGrammarParser.archi_elem_types_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("archi_elem_types");
              	            	archi_typeReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	    // Create a CST Node
              		if(list_archi_topologyGen != null) {
              	        for(Iterator it = list_archi_topologyGen.iterator(); it.hasNext(); )  { 
              	            simpleGrammarParser.archi_topology_return r = (simpleGrammarParser.archi_topology_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("archi_topology");
              	            	archi_typeReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	    // Create a Token CST Leaf	
              	    if(TK_1 != null) {
              			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              	 		TK_1Leaf.setKind("TOKEN");
              	 		TK_1Leaf.setValue((TK_1!=null?TK_1.getText():null));
              			TK_1Leaf.setPos(TK_1.getCharPositionInLine());
              			TK_1Leaf.setLine(TK_1.getLine());
              	 		archi_typeReturnNode.getChildren().add(TK_1Leaf);
              	 	}
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = archi_typeReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "archi_type"

    public static class archi_header_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "archi_header"
    // files/gen/simpleGrammar.g:89:1: archi_header returns [Node returnNode] : (TK_0= '(' TK_1= 'void' TK_2= ')' | TK_0= '(' init_constant_listGen+= init_constant_list TK_1= ')' );
    public final simpleGrammarParser.archi_header_return archi_header() throws RecognitionException {
        simpleGrammarParser.archi_header_return retval = new simpleGrammarParser.archi_header_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token TK_1=null;
        Token TK_2=null;
        List list_init_constant_listGen=null;
        RuleReturnScope init_constant_listGen = null;
        try {
            // files/gen/simpleGrammar.g:90:1: (TK_0= '(' TK_1= 'void' TK_2= ')' | TK_0= '(' init_constant_listGen+= init_constant_list TK_1= ')' )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==14) ) {
                int LA1_1 = input.LA(2);

                if ( (LA1_1==15) ) {
                    alt1=1;
                }
                else if ( (LA1_1==18) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // files/gen/simpleGrammar.g:90:3: TK_0= '(' TK_1= 'void' TK_2= ')'
                    {
                    TK_0=(Token)match(input,14,FOLLOW_14_in_archi_header87); if (state.failed) return retval;
                    TK_1=(Token)match(input,15,FOLLOW_15_in_archi_header91); if (state.failed) return retval;
                    TK_2=(Token)match(input,16,FOLLOW_16_in_archi_header95); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node archi_headerReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		archi_headerReturnNode.setKind("archi_header");
                      	    // Create a Token CST Leaf	
                      	    if(TK_0 != null) {
                      			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
                      	 		TK_0Leaf.setKind("TOKEN");
                      	 		TK_0Leaf.setValue((TK_0!=null?TK_0.getText():null));
                      			TK_0Leaf.setPos(TK_0.getCharPositionInLine());
                      			TK_0Leaf.setLine(TK_0.getLine());
                      	 		archi_headerReturnNode.getChildren().add(TK_0Leaf);
                      	 	}
                      	    // Create a Token CST Leaf	
                      	    if(TK_1 != null) {
                      			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
                      	 		TK_1Leaf.setKind("TOKEN");
                      	 		TK_1Leaf.setValue((TK_1!=null?TK_1.getText():null));
                      			TK_1Leaf.setPos(TK_1.getCharPositionInLine());
                      			TK_1Leaf.setLine(TK_1.getLine());
                      	 		archi_headerReturnNode.getChildren().add(TK_1Leaf);
                      	 	}
                      	    // Create a Token CST Leaf	
                      	    if(TK_2 != null) {
                      			Leaf TK_2Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
                      	 		TK_2Leaf.setKind("TOKEN");
                      	 		TK_2Leaf.setValue((TK_2!=null?TK_2.getText():null));
                      			TK_2Leaf.setPos(TK_2.getCharPositionInLine());
                      			TK_2Leaf.setLine(TK_2.getLine());
                      	 		archi_headerReturnNode.getChildren().add(TK_2Leaf);
                      	 	}
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = archi_headerReturnNode;
                      	
                    }

                    }
                    break;
                case 2 :
                    // files/gen/simpleGrammar.g:124:6: TK_0= '(' init_constant_listGen+= init_constant_list TK_1= ')'
                    {
                    TK_0=(Token)match(input,14,FOLLOW_14_in_archi_header105); if (state.failed) return retval;
                    pushFollow(FOLLOW_init_constant_list_in_archi_header109);
                    init_constant_listGen=init_constant_list();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_init_constant_listGen==null) list_init_constant_listGen=new ArrayList();
                    list_init_constant_listGen.add(init_constant_listGen);

                    TK_1=(Token)match(input,16,FOLLOW_16_in_archi_header113); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node archi_headerReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		archi_headerReturnNode.setKind("archi_header");
                      	    // Create a Token CST Leaf	
                      	    if(TK_0 != null) {
                      			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
                      	 		TK_0Leaf.setKind("TOKEN");
                      	 		TK_0Leaf.setValue((TK_0!=null?TK_0.getText():null));
                      			TK_0Leaf.setPos(TK_0.getCharPositionInLine());
                      			TK_0Leaf.setLine(TK_0.getLine());
                      	 		archi_headerReturnNode.getChildren().add(TK_0Leaf);
                      	 	}
                      	    // Create a CST Node
                      		if(list_init_constant_listGen != null) {
                      	        for(Iterator it = list_init_constant_listGen.iterator(); it.hasNext(); )  { 
                      	            simpleGrammarParser.init_constant_list_return r = (simpleGrammarParser.init_constant_list_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("init_constant_list");
                      	            	archi_headerReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      	    // Create a Token CST Leaf	
                      	    if(TK_1 != null) {
                      			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
                      	 		TK_1Leaf.setKind("TOKEN");
                      	 		TK_1Leaf.setValue((TK_1!=null?TK_1.getText():null));
                      			TK_1Leaf.setPos(TK_1.getCharPositionInLine());
                      			TK_1Leaf.setLine(TK_1.getLine());
                      	 		archi_headerReturnNode.getChildren().add(TK_1Leaf);
                      	 	}
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = archi_headerReturnNode;
                      	
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "archi_header"

    public static class init_constant_list_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "init_constant_list"
    // files/gen/simpleGrammar.g:161:1: init_constant_list returns [Node returnNode] : init_constantGen+= init_constant (TK_0= ',' init_constantGen_1+= init_constant )* ;
    public final simpleGrammarParser.init_constant_list_return init_constant_list() throws RecognitionException {
        simpleGrammarParser.init_constant_list_return retval = new simpleGrammarParser.init_constant_list_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        List list_init_constantGen=null;
        List list_init_constantGen_1=null;
        RuleReturnScope init_constantGen = null;
        RuleReturnScope init_constantGen_1 = null;
        try {
            // files/gen/simpleGrammar.g:162:1: (init_constantGen+= init_constant (TK_0= ',' init_constantGen_1+= init_constant )* )
            // files/gen/simpleGrammar.g:162:3: init_constantGen+= init_constant (TK_0= ',' init_constantGen_1+= init_constant )*
            {
            pushFollow(FOLLOW_init_constant_in_init_constant_list133);
            init_constantGen=init_constant();

            state._fsp--;
            if (state.failed) return retval;
            if (list_init_constantGen==null) list_init_constantGen=new ArrayList();
            list_init_constantGen.add(init_constantGen);

            // files/gen/simpleGrammar.g:162:35: (TK_0= ',' init_constantGen_1+= init_constant )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==17) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // files/gen/simpleGrammar.g:162:36: TK_0= ',' init_constantGen_1+= init_constant
            	    {
            	    TK_0=(Token)match(input,17,FOLLOW_17_in_init_constant_list138); if (state.failed) return retval;
            	    pushFollow(FOLLOW_init_constant_in_init_constant_list142);
            	    init_constantGen_1=init_constant();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_init_constantGen_1==null) list_init_constantGen_1=new ArrayList();
            	    list_init_constantGen_1.add(init_constantGen_1);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node init_constant_listReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		init_constant_listReturnNode.setKind("init_constant_list");
              	    // Create a CST Node
              		if(list_init_constantGen != null) {
              	        for(Iterator it = list_init_constantGen.iterator(); it.hasNext(); )  { 
              	            simpleGrammarParser.init_constant_return r = (simpleGrammarParser.init_constant_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("init_constant");
              	            	init_constant_listReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }

              		// Create a special CST Node for terminal init_constantGen_1 aggregation
              		if(list_init_constantGen_1 != null) {
              	    for(int pos = 0; pos < list_init_constantGen_1.size(); pos++ )  { 
              	    // Create a Token CST Leaf	
              	    if(TK_0 != null) {
              			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              	 		TK_0Leaf.setKind("TOKEN");
              	 		TK_0Leaf.setValue((TK_0!=null?TK_0.getText():null));
              			TK_0Leaf.setPos(TK_0.getCharPositionInLine());
              			TK_0Leaf.setLine(TK_0.getLine());
              	 		init_constant_listReturnNode.getChildren().add(TK_0Leaf);
              	 	}
              		// No Terminal extractor
              	    if(list_init_constantGen_1 != null) {		
              	    	simpleGrammarParser.init_constant_return r = (simpleGrammarParser.init_constant_return) list_init_constantGen_1.get(pos); 
              	    	if(r != null && r.returnNode != null) {
              	        	r.returnNode.setKind("init_constant");
              	    		init_constant_listReturnNode.getChildren().add(r.returnNode);
              	    	} 
              		}
              		}
              		}

              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = init_constant_listReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "init_constant_list"

    public static class init_constant_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "init_constant"
    // files/gen/simpleGrammar.g:205:1: init_constant returns [Node returnNode] : TK_0= 'const' dataTypeGen+= dataType constNameGen+= constName TK_1= ':=' exprGen+= expr ;
    public final simpleGrammarParser.init_constant_return init_constant() throws RecognitionException {
        simpleGrammarParser.init_constant_return retval = new simpleGrammarParser.init_constant_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token TK_1=null;
        List list_dataTypeGen=null;
        List list_constNameGen=null;
        List list_exprGen=null;
        RuleReturnScope dataTypeGen = null;
        RuleReturnScope constNameGen = null;
        RuleReturnScope exprGen = null;
        try {
            // files/gen/simpleGrammar.g:206:1: (TK_0= 'const' dataTypeGen+= dataType constNameGen+= constName TK_1= ':=' exprGen+= expr )
            // files/gen/simpleGrammar.g:206:3: TK_0= 'const' dataTypeGen+= dataType constNameGen+= constName TK_1= ':=' exprGen+= expr
            {
            TK_0=(Token)match(input,18,FOLLOW_18_in_init_constant164); if (state.failed) return retval;
            pushFollow(FOLLOW_dataType_in_init_constant168);
            dataTypeGen=dataType();

            state._fsp--;
            if (state.failed) return retval;
            if (list_dataTypeGen==null) list_dataTypeGen=new ArrayList();
            list_dataTypeGen.add(dataTypeGen);

            pushFollow(FOLLOW_constName_in_init_constant172);
            constNameGen=constName();

            state._fsp--;
            if (state.failed) return retval;
            if (list_constNameGen==null) list_constNameGen=new ArrayList();
            list_constNameGen.add(constNameGen);

            TK_1=(Token)match(input,19,FOLLOW_19_in_init_constant176); if (state.failed) return retval;
            pushFollow(FOLLOW_expr_in_init_constant180);
            exprGen=expr();

            state._fsp--;
            if (state.failed) return retval;
            if (list_exprGen==null) list_exprGen=new ArrayList();
            list_exprGen.add(exprGen);

            if ( state.backtracking==0 ) {
